--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -45,7 +45,6 @@
 
 .home-main {
     margin: auto;
-    height: 100vh;
     width: auto;
     display: flex;
 }
@@ -56,8 +55,10 @@
     align-items: center;
     flex-direction: column;
     width: 400px;
-    justify-self: center;
-    align-self: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
 }
 
 .home-nothing-here img {
@@ -123,7 +124,8 @@
     border: 1px solid rgba(61, 61, 61, 0.4);
     margin: 10px 0px;
 }
-.seperatorSlide{
+
+.seperatorSlide {
     width: 90%;
     margin: 0;
     border: .5px solid rgba(61, 61, 61, 0.4);
@@ -183,10 +185,12 @@
     flex-direction: row;
     justify-content: center;
 }
-.slide-search-header-searchBar img{
+
+.slide-search-header-searchBar img {
     width: 10%;
 }
-.slide-search-header-searchBar input[type="text"]{
+
+.slide-search-header-searchBar input[type="text"] {
     font-size: 1em;
     outline: none;
     width: 77%;
@@ -200,7 +204,8 @@
     height: 78%;
     overflow: scroll;
 }
-.slide-search-container-item{
+
+.slide-search-container-item {
     display: flex;
     flex-direction: row;
     margin: 10px auto 0px auto;
@@ -209,21 +214,24 @@
     overflow: hidden;
     opacity: 0;
 }
-.slide-search-container-item-left{
+
+.slide-search-container-item-left {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 20%;
     height: 100%;
 }
-.slide-search-container-item-left img{
+
+.slide-search-container-item-left img {
     height: 70px;
     width: 70px;
     border-radius: 50%;
     border: 2px solid #6445D2;
     object-fit: cover;
 }
-.slide-search-container-item-right{
+
+.slide-search-container-item-right {
     display: flex;
     flex-flow: column;
     width: 75%;
@@ -231,20 +239,23 @@
     margin-left: 5px;
     justify-content: center;
 }
-.slide-search-container-item-right > :first-child{
+
+.slide-search-container-item-right> :first-child {
     font-size: 1.4em;
     font-weight: bold;
     height: 50%;
 }
-.slide-search-container-item-right > :last-child{
+
+.slide-search-container-item-right> :last-child {
     font-size: 1.2em;
     height: 50%;
 }
-slide-search-container-item-right a:visited, a{
+
+slide-search-container-item-right a:visited, a {
     color: #3d3d3d;
 }
 
-.loading-spinner{
+.loading-spinner {
     margin: 20px auto 0px auto;
     width: 40px;
     height: 40px;
@@ -253,8 +264,115 @@ slide-search-container-item-right a:visited, a{
     animation: spin .8s linear infinite;
     display: none;
 }
-@keyframes spin{
-    100%{
+
+@keyframes spin {
+    100% {
         transform: rotate(360deg);
     }
+}
+
+.home-main-post-container {
+    display: inline;
+}
+.home-main-post-container:last-child{
+    margin-bottom: 35px;
+}
+
+.home-main-post-container-item {
+    width: 900px;
+    height: 450px;
+    margin-top: 20px;
+    display: flex;
+    background: #FFFFFF;
+    border: 1px solid rgba(61, 61, 61, 0.5);
+    box-sizing: border-box;
+    box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.25);
+}
+
+.home-main-post-container-item-left {
+    width: 65%;
+    height: 100%;
+}
+
+.home-main-post-container-item-right {
+    width: 35%;
+    height: 100%;
+}
+
+.home-main-post-container-item-left img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.home-main-post-container-item-right-profile {
+    width: 100%;
+    height: 90px;
+    display: flex;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.home-main-post-container-item-right-comment {
+    width: 100%;
+    height: 305px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    overflow: scroll;
+}
+
+.home-main-post-container-item-right-like {
+    width: 100%;
+    height: 50px;
+}
+
+.home-main-post-container-item-right-profile img {
+    position: relative;
+    object-fit: cover;
+    width: 65px;
+    height: 65px;
+    border: 2px solid #6445D2;
+    box-sizing: border-box;
+    border-radius: 50px;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.home-main-post-container-item-right-profile p {
+    position: relative;
+    left: 40px;
+    display: flex;
+    align-items: center;
+    font-size: 1.3em;
+}
+
+.home-main-post-container-item-right-comment-item{
+    padding: 15px 15px 0px 15px;
+    display: flex;
+    flex-flow: column;
+}
+
+.home-main-post-container-item-right-comment-item .comment-username{
+    font-family: PopMedium;
+    font-size: 1.1em;
+}
+.viewComments{
+    font-size: .8em;
+    color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+.home-main-post-container-item-right-comment-item .comment-text{
+    font-size: 1.1em;
+}
+.home-main-post-container-item-right-like{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    padding: 0px 10px
+}
+.home-main-post-container-item-right-like svg{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.home-main-post-container-item-right-like p{
+    margin-left: 10px;
 }
