--- a/src/main/resources/templates/admin/admin-users.html
+++ b/src/main/resources/templates/admin/admin-users.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Aka">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Admin panel</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--    <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"-->
     <!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-
-    <style>
-        .bg-light,
-        .sidebar{height: 100%;}
-    </style>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
@@ -43,7 +35,7 @@
                                 <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                             </svg>
-                            User
+                            <a href="/admin/users">User</a>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -55,7 +47,7 @@
                                 <polyline points="2 17 12 22 22 17"></polyline>
                                 <polyline points="2 12 12 17 22 12"></polyline>
                             </svg>
-                            Posts
+                            <a href="/admin/posts">Post</a>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -66,54 +58,32 @@
                                 <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
                                 <polyline points="13 2 13 9 20 9"></polyline>
                             </svg>
-                            Advertisements
+                            <a href="/admin/ads">Advertisements</a>
                         </a>
                     </li>
-
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#">-->
-<!--                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"-->
-<!--                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"-->
-<!--                                 stroke-linejoin="round" class="feather feather-bar-chart-2">-->
-<!--                                <line x1="18" y1="20" x2="18" y2="10"></line>-->
-<!--                                <line x1="12" y1="20" x2="12" y2="4"></line>-->
-<!--                                <line x1="6" y1="20" x2="6" y2="14"></line>-->
-<!--                            </svg>-->
-<!--                            Reports-->
-<!--                        </a>-->
-<!--                    </li>-->
 
                 </ul>
             </div>
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h2>Post title</h2>
+            <h2>Users List</h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr>
-                        <th>#</th>
-                        <th>Header</th>
-                        <th>Header</th>
-                        <th>Header</th>
-                        <th>Header</th>
+                        <th>User Id</th>
+                        <th>User Name</th>
+                        <th>Role</th>
+                        <th>Status</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>1,001</td>
-                        <td>Lorem</td>
-                        <td>ipsum</td>
-                        <td>dolor</td>
-                        <td>sit</td>
-                    </tr>
-                    <tr>
-                        <td>1,002</td>
-                        <td>amet</td>
-                        <td>consectetur</td>
-                        <td>adipiscing</td>
-                        <td>elit</td>
+                    <tr th:each="usere: ${users}">
+                        <td th:text="${usere.id}" />
+                        <td th:text="${usere.username}" />
+                        <td th:text="${usere.role}" />
+                        <td th:text="${usere.status}" />
                     </tr>
                     </tbody>
                 </table>
@@ -121,17 +91,11 @@
         </main>
     </div>
 </div>
-
+</div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"-->
-<!--        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"-->
-<!--        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"-->
-<!--        crossorigin="anonymous"></script>-->
-
 </body>
-<div th:replace="admin/footer"/></div>
+<!--<footer th:replace="admin/footer"/>-->
+
 </html>
