--- a/src/main/resources/templates/post/postPhoto.html
+++ b/src/main/resources/templates/post/postPhoto.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-<div class="container">
-<!--    <form method="POST" action="#" th:action="@{/addPostData}" th:object="${Post}">-->
-    <form method="POST" action="#" th:action="@{/addPostPhoto}" >
+<div class="container" style="margin-top: 50px;margin-bottom: 50px;">
+    <form method="POST" action="#" th:action="@{/addPostPhoto}" th:object="${Post}">
+<!--    <form method="POST" action="#" th:action="@{/addPostPhoto}" >-->
         <div class="form-group" style="height: 400px;">
-            <img  id="postImage" style="height: 100%;width: 100%;object-fit: cover;"/>
+            <img th:src="@{${photoPath}}" id="postImage" style="height: 100%;width: 100%;object-fit: cover;border: 1px solid #ced4da;"/>
             <script>
                 $(document).ready(function () {
                     $('#inputfile').change(function () {
@@ -44,16 +44,22 @@
                 });
             </script>
             <input id="inputfile" type="file"/>
-            <input id="photoPath" name="photoPath" style="visibility: hidden"/>
+            <input id="photoPath" name="photo.path" style="visibility: hidden"/>
         </div>
         <div class="form-group" style="margin-top: 50px;">
             <label for="title">Post Title</label>
-            <input type="text" class="form-control" id="title" name="title" placeholder="Enter Post Title">
+            <input type="text"  th:field="*{title}" class="form-control" id="title" name="title" placeholder="Enter Post Title">
             <small id="emailHelp" class="form-text text-muted">Post Title</small>
+        </div>
+        <div class="" style="color: red;">
+            <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"> # </p>
         </div>
         <div class="form-group">
             <label for="description">Description</label>
             <input type="text" class="form-control" id="description" name="description" placeholder="Description">
+        </div>
+        <div class="" style="color: red;">
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"> # </p>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
