--- a/src/main/resources/templates/post/postVideo.html
+++ b/src/main/resources/templates/post/postVideo.html
@@ -13,7 +13,7 @@
 
 <body>
 <div class="container">
-    <form method="POST" action="#" th:action="@{/addPostVideo}" >
+    <form method="POST" action="#" th:action="@{/addPostPhoto}" th:object="${Post}">
         <div class="form-group" style="height: 400px;">
             <video id="divVideo" controls="controls" style="width: 100%; height: 100%">
                 <source src="" type="video/mp4">
@@ -37,7 +37,7 @@
                                 console.log(map);
                                 $('#divVideo source').attr('src', "data:video/mp4;base64,"+map.byteArray);
                                 $("#divVideo")[0].load();
-                                $("#videoPath").val(map.path);
+                                $("#photoPath").val(map.path);
                             },
                             error: function(error) {
                                 console.log(error);
@@ -47,7 +47,7 @@
                 });
             </script>
             <input id="inputfile" type="file"/>
-            <input id="videoPath" name="photoPath" style="visibility: hidden"/>
+            <input id="photoPath" name="photo.path" style="visibility: hidden"/>
         </div>
         <div class="form-group" style="margin-top: 50px;">
             <label for="title">Post Title</label>
