--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -107,10 +107,10 @@
         .grid-wrapper{display: grid;grid-template-columns: 500px 400px;}
         .col-one{grid-column: 1/1;}
         .col-two{grid-column: 2/2;background: #fff;padding: 15px;}
-        .postimg img{width: 100%;}
+        .postimg img{width: 100%; width: 100%; object-fit: cover; height: 532px;}
         .comment_items{height: 300px;overflow-y: scroll;}
         .floatleft{float: left;margin-right: 10px;margin-top: 4px;width: 35px;height: 35px;}
-        .model-body{padding:0 15px;}
+        .model-body{padding:0px;}
         .modal-title {margin: 0;line-height: 1.42857143;font-weight: 700;font-size: 16px;position: absolute;}
         .c999{color:#999;}
         .fright{float: right;}
@@ -205,7 +205,6 @@
             });
         }
         function openFollowingModal(id) {
-
             $.ajax({
                 url: "/following/" + id,
                 success: function(data) {
