--- a/src/main/resources/templates/admin/adminPosts.html
+++ b/src/main/resources/templates/admin/adminPosts.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>-->
     <title>Admin panel</title>
 </head>
 <body>
@@ -88,7 +89,7 @@
                         <td th:text="${(poste.isUnhealthy) ? 'Yes' : 'No'}"></td>
                         <td th:text="${poste.status}"></td>
 <!--                        <td th:text="${poste.status}" />-->
-                        <td><input type="button" id="submit" value="Disable/Enable"></td>
+                        <td><input type="button" class="submit" th:postId="${poste.id}" value="Disable/Enable"></td>
 
                     </tr>
                     </tbody>
@@ -105,3 +106,26 @@
 <!--<footer th:replace="admin/footer"/>-->
 
 </html>
+<script>
+    $(document).ready(function () {
+        $(".submit").on('click',function() {
+
+            $.ajax({
+                url: "/updatePostStatus",
+                type: "POST",
+                data: "?&postId="+$('.submit').attr("postId"),
+                contentType: false,
+                cache: false,
+                processData: false,
+                success: function (map) {
+                    console.log(map);
+                    $('#photoPath').val(map.path);
+                    $('#postImage').attr("src","data:image/png;base64,"+map.byteArray);
+                },
+                error: function(error) {
+                    console.log(error);
+                }
+            });
+        });
+    });
+</script>
