--- a/src/main/resources/templates/post/postVideo.html
+++ b/src/main/resources/templates/post/postVideo.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container" style="margin-top: 50px;margin-bottom: 50px;">
     <form method="POST" action="#" th:action="@{/addPostPhoto}" th:object="${Post}">
         <div class="form-group" style="height: 400px;">
             <video id="divVideo" controls="controls" style="width: 100%; height: 100%">
